--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "framework": null,
     "functions": {
         "api/index.php": {
-            "runtime": "vercel-php@latest"
+            "runtime": "vercel-php@8.3.15"
         }
     },
     "routes": [
